<resources>
    <string name="app_name">Teste Cast Group</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="description">Descrição: </string>
    <string name="start_date">Início: </string>
    <string name="end_date">Final: </string>
    <string name="category">Categoria: </string>
    <string name="students_number">Número de alunos (opcional): </string>
    <string name="edit_button_text">Editar</string>

    <string name="add_course_button_text">Adicionar</string>

    <string name="delete_warning">Tem certeza que deseja deletar este curso?</string>
    <string name="search_dialog">Escolha a categoria pela qual deseja filtrar</string>
    <string name="confirmation">Sim</string>
    <string name="search_text">Pesquisar</string>
    <string name="cancel">Cancelar</string>

    <string name="submit">Submeter</string>

    <string name="description_placeholder">Insira uma descrição entre 6 e 140 caracteres</string>
    <string name="students_number_placeholder">Insira um número inteiro maior que 0</string>

    <string name="description_validation">A descrição precisa ter entre 6 e 140 caracteres!</string>
    <string name="date_compare_validation">A data final precisa ser maior do que a inicial!</string>
    <string name="date_current_validation">A data inicial precisa ser maior do que a atual!</string>
    <string name="delete_success">Curso deletado!</string>
    <string name="post_success">Curso adicionado!</string>
    <string name="put_success">Curso editado!</string>
    <string name="students_validation">O número de alunos deve ser 1 ou mais!</string>
    <string name="parsing_error">Erro no formato da data!</string>

    <string name="all_courses">Todos os cursos</string>
</resources>