<!-- fragment_edit_name.xml -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/fragment_delete_dialog_layout"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:padding="16dp"
    >

    <TextView
        android:id="@+id/lbl_your_name"
        android:text="@string/delete_warning"
        android:textSize="@dimen/text_size"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dialog_button_margin"
        />

   <LinearLayout
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_gravity="center"
       >
       <com.google.android.material.button.MaterialButton
           android:id="@+id/fragment_delete_dialog_confirmation_button"
           android:layout_width="@dimen/dialog_delete_button_width"
           android:layout_height="wrap_content"
           android:text="@string/confirmation"
           android:layout_gravity="center"
           android:layout_margin="@dimen/dialog_button_margin"
           />

       <com.google.android.material.button.MaterialButton
           android:id="@+id/fragment_delete_dialog_cancel_button"
           android:layout_width="@dimen/dialog_delete_button_width"
           android:layout_height="wrap_content"
           android:text="@string/cancel"
           android:layout_gravity="center"
           android:layout_margin="@dimen/dialog_button_margin"
           app:backgroundTint="@color/cardview_dark_background_custom"
           />
   </LinearLayout>
</LinearLayout>