<!-- activity_course_details.xml -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    >

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay"
        android:id="@+id/activity_course_details_app_bar"
        android:layout_alignParentTop="true"
        >

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/activity_course_details_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay"
            />

    </com.google.android.material.appbar.AppBarLayout>

    <com.miguelbrmfreitas.testecastgroup.components.CustomButton
        android:id="@+id/activity_course_details_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:has_icon="true"
        app:button_background="@drawable/background_primary_button"
        app:button_text="@string/submit"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_margin="@dimen/fab_margin"
        />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/activity_course_details_app_bar"
        >

        <RelativeLayout
            android:id="@+id/activity_course_details_relative_layout"
            android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:layout_margin="16dp"
            >

            <TextView
                android:id="@+id/activity_course_details_description_label"
                android:text="@string/description"
                android:textSize="@dimen/label_size"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                />

            <EditText
                android:id="@+id/activity_course_details_description_edit_text"
                android:layout_width="match_parent"  android:layout_height="wrap_content"
                android:inputType="textMultiLine"
                android:imeOptions="actionDone"
                android:layout_below="@id/activity_course_details_description_label"
                android:focusable="true"
                android:hint="@string/description_placeholder"
                android:textSize="@dimen/text_size"
                />

            <TextView
                android:id="@+id/activity_course_details_start_date_label"
                android:text="@string/start_date"
                android:textSize="@dimen/label_size"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/activity_course_details_description_edit_text"
                android:layout_marginTop="@dimen/margin_top_fields"
                />

            <EditText
                android:id="@+id/fragment_course_details_start_date_picker"
                android:layout_width="@dimen/edit_text_width"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@id/activity_course_details_start_date_label"
                android:layout_marginStart="5dp"
                android:layout_marginBottom="-9dp"
                android:layout_toEndOf="@id/activity_course_details_start_date_label"
                android:editable="false"
                android:clickable="true"
                android:focusable="true"
                android:textSize="@dimen/text_size"
                android:paddingTop="@dimen/edit_text_padding_top"
                />

            <TextView
                android:id="@+id/activity_course_details_end_date_label"
                android:text="@string/end_date"
                android:textSize="@dimen/label_size"
                android:textStyle="bold"
                android:layout_marginTop="@dimen/margin_top_fields"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/fragment_course_details_start_date_picker"
                />

            <EditText
                android:id="@+id/activity_course_details_end_date_picker"
                android:layout_width="@dimen/edit_text_width"
                android:layout_height="wrap_content"
                android:layout_below="@id/activity_course_details_start_date_label"
                android:layout_alignBottom="@id/activity_course_details_end_date_label"
                android:layout_marginStart="5dp"
                android:layout_marginBottom="-9dp"
                android:layout_toEndOf="@id/activity_course_details_end_date_label"
                android:editable="false"
                android:clickable="true"
                android:focusable="true"
                android:textSize="@dimen/text_size"
                android:paddingTop="@dimen/edit_text_padding_top"
                />

            <TextView
                android:id="@+id/activity_course_details_category_label"
                android:text="@string/category"
                android:textSize="@dimen/label_size"
                android:textStyle="bold"
                android:layout_marginTop="@dimen/margin_top_fields"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/activity_course_details_end_date_picker"
                />

            <NumberPicker
                android:id="@+id/activity_course_details_category_picker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/activity_course_details_category_label"
                android:layout_below="@id/activity_course_details_category_label"
                android:layout_marginStart="5dp"
                android:layout_marginBottom="-5dp"
                />

            <TextView
                android:id="@+id/activity_course_details_students_number_label"
                android:text="@string/students_number"
                android:textSize="@dimen/label_size"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/activity_course_details_category_picker"
                />

            <EditText
                android:id="@+id/activity_course_details_students_number_picker"
                android:layout_width="@dimen/edit_text_width"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@id/activity_course_details_students_number_label"
                android:layout_toEndOf="@id/activity_course_details_students_number_label"
                android:layout_below="@id/activity_course_details_category_picker"
                android:layout_marginStart="5dp"
                android:layout_marginBottom="-8dp"
                android:inputType="numberSigned"
                android:textSize="@dimen/text_size"
                android:paddingTop="@dimen/edit_text_padding_top"
                />

        </RelativeLayout>

    </ScrollView>
</RelativeLayout>